--- a/index.html
+++ b/index.html
@@ -53,6 +53,28 @@
           <p>Get Certified, Get Ahead</p>
         </div>
       </div>
+      <div class="about" id="about">
+        <h1 class="title">About Us</h1>
+        <p>
+          SimpliLearn is the world's #1 online bootcamp and one of the world's
+          leading certification training providers
+        </p>
+        <div class="btn">
+          <a href="https://www.simplilearn.com/resources">Learn more</a>
+        </div>
+      </div>
+      <div class="services" id="services">
+        <h1 class="title">About Us</h1>
+        <p>
+          SimpliLearn is the world's #1 online bootcamp and one of the world's
+          leading certification training providers
+        </p>
+        <div class="diff_services">
+          <div class="diff_services_item">
+            <img src="images/p2.JPG" alt="" />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
