--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="services" id="services">
-        <h1 class="title">About Us</h1>
+        <h1 class="title">Our Services</h1>
         <p>
           SimpliLearn is the world's #1 online bootcamp and one of the world's
           leading certification training providers
@@ -72,6 +72,32 @@
         <div class="diff_services">
           <div class="diff_services_item">
             <img src="images/p2.JPG" alt="" />
+            <h3 class="sub_title">Web Development</h3>
+          </div>
+          <div class="diff_services_item">
+            <img src="images/p3.JPG" alt="" />
+            <h3 class="sub_title">App Development</h3>
+          </div>
+          <div class="diff_services_item">
+            <img src="images/p4.JPG" alt="" />
+            <h3 class="sub_title">Online Certification</h3>
+          </div>
+        </div>
+        <div class="contactus" id="contactus">
+          <h1 class="title">Contact Us</h1>
+          <div class="form_wrapper">
+            <div class="form_input">
+              <input type="text" placeholder="Email" />
+            </div>
+            <div class="form_input">
+              <input type="text" placeholder="Subject" />
+            </div>
+            <div class="form_input">
+              <input type="text" placeholder="Message" />
+            </div>
+            <div class="btn">
+              <a href="#">Submit</a>
+            </div>
           </div>
         </div>
       </div>
