add our team pics

--- a/index.html
+++ b/index.html
@@ -101,6 +101,22 @@
           </div>
         </div>
       </div>
+      <div class="ourteam">
+        <h1 class="title">Our Team</h1>
+        <div class="ourteam_wrapper">
+          <div class="team-1 team">
+            <div class="team-members" data-name="Billy">
+              <img src="images/p1.JPG" alt="" />
+            </div>
+            <div class="team-members" data-name="Bob">
+              <img src="images/p2.JPG" alt="" />
+            </div>
+            <div class="team-members" data-name="Jane">
+              <img src="images/p3.JPG" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
