Our team styling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               >
             </li>
             <li><a href="#contactus">Contact</a></li>
-            <li><a href="#ourteam">Our Team</a></li>
+            <li><a href="#our_team">Our Team</a></li>
           </ul>
         </div>
       </div>
@@ -102,20 +102,48 @@
         </div>
       </div>
       <div class="ourteam">
-        <h1 class="title">Our Team</h1>
+        <h1 class="title" id="our_team">Our Team</h1>
         <div class="ourteam_wrapper">
           <div class="team-1 team">
-            <div class="team-members" data-name="Billy">
+            <div class="team_members" data-name="Billy">
               <img src="images/p1.JPG" alt="" />
             </div>
-            <div class="team-members" data-name="Bob">
+            <div class="team_members" data-name="Bob">
               <img src="images/p2.JPG" alt="" />
             </div>
-            <div class="team-members" data-name="Jane">
+            <div class="team_members" data-name="Jane">
               <img src="images/p3.JPG" alt="" />
             </div>
           </div>
         </div>
+        <footer class="footer">
+          <div class="container">
+            <div class="row">
+              <div class="footer_col">
+                <h4 class="company">
+                  <ul>
+                    <li>
+                      <a href="https://www.simplilearn.com/about-us"
+                        >About us</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#our_team">Our Team</a>
+                    </li>
+                    <li>
+                      <a href="https://www.simplilearn.com/careers">Careers</a>
+                    </li>
+                    <li>
+                      <a href="https://www.simplilearn.com/reviews"
+                        >Alumni Speak</a
+                      >
+                    </li>
+                  </ul>
+                </h4>
+              </div>
+            </div>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
